fixing bulk operation